Dockerfile: bump to Java 25